--- a/portfolio/resume.html
+++ b/portfolio/resume.html
@@ -74,7 +74,7 @@
                           <p><span class="spot"></span>富有團隊協作精神，善於激發創意思維，共同解決複雜設計挑戰</p>
                         </div>
 
-                        <a class="download-btn" href="assets/images/sammi-resume.pdf" download="sammi-resume">下載履歷</a>
+                        <a class="download-btn" href="images/sammi-resume.pdf" download="sammi-resume">下載履歷</a>
                     </div>
                 </div>
             </div>
