--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -124,7 +124,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-4 col-md-12 col-12 d-flex align-items-center">
+                <div class="col-lg-4 col-md-12 col-12 align-items-center">
                     <div class="about-text">
                         <div class="project-name"><h2>各式促銷頁面設計</h2></div>
                         <h1 class="animated animated-text">
