--- a/portfolio/project1.html
+++ b/portfolio/project1.html
@@ -49,15 +49,19 @@
         <div class="row">
           
           <div class="col-lg-12 col-md-12 col-12">
-            <div> <img class="w-100" src="images/gotrade_1.png"></div>
+            <div> 
+                <img class="w-100" src="images/gotrade_1.png">
+            </div>
           </div>
 
           <div class="col-lg-12 col-12 project-name">
             <h2 class="col-lg-8 mx-auto">GoTrade 數位資產管理錢包</h2>
           </div>
           <div class="col-lg-12 col-md-12 col-12">
-            <p>數位資產管理應用程式，一切運行都是基於區塊鏈技術，運用數字貨幣參與遊戲。用戶可以隨時對數字貨幣進行交易，不受到
-              平台方的影響，此錢包平台僅提供區塊鏈技術支持，將所有的交易請求發送到區塊鏈上，按照區塊鏈的規則完成交易。
+            <p>這是一款基於區塊鏈技術的數位資產管理應用程式。用戶可以使用數字貨幣參與平台上的各種活動和遊戲。
+              本平台的核心優勢在於，用戶可以隨時自由地進行數字貨幣交易，不受平台方干預或限制。作為一個去中心化的錢包平台，
+              我們僅提供區塊鏈技術支持，將所有交易請求直接發送至區塊鏈網絡，確保每筆交易都嚴格按照區塊鏈的協議規則完成，
+              從而保證交易的安全性和透明度。
             </p>
           </div>
           
@@ -75,7 +79,7 @@
                   <h4>icon</h4>
                 </div>
                 <img src="images/iconColor.png" class="img-fluid" alt="svg image">
-                <div class="describe"><p>我們利用強而簡潔的幾何形狀和自信的排版設計，打造了一個簡單易懂的數字資產管理應用。在競爭激烈的加密貨幣市場中，我們以乾淨、堅固的設計為特色，簡化了購買和出售加密貨幣的流程。主色調採用了簡單易懂的色彩和形狀，突出了清晰簡潔的特點。</p></div>
+                <div class="describe"><p>一致的視覺風格，使用藍色為主色調，搭配白色背景，創造清新現代的視覺效果。打造了一個簡單易懂的數字資產管理應用。在競爭激烈的加密貨幣市場中，我們以乾淨、堅固的設計為特色，簡化了購買和出售加密貨幣的流程。主色調採用了簡單易懂的色彩和形狀，突出了清晰簡潔的特點。</p></div>
               </div>
               <div class="col-lg-12 col-md-12 col-12">
                 <div class="col-lg-8 img-title" style="">
