--- a/portfolio/project3.html
+++ b/portfolio/project3.html
@@ -53,7 +53,7 @@
       </div>
   </nav>
 
-  <section class="contact d-lg-flex justify-content-center align-items-center" id="contact">
+  <!--section class="contact d-lg-flex justify-content-center align-items-center" id="contact">
       <div class="container">
         <div class="row">
           
@@ -65,12 +65,12 @@
             <h2 class="col-lg-8 mx-auto"></h2>
           </div>
           <div class="col-lg-12 col-md-12 col-12">
-            <!--p>以簡約的當代設計為本，並從細節添加溫暖、親近的居家感受！每一件商品都有獨特的故事、個性與風格，可以找到您想要的材質與顏色為您的家帶來生命力。</p-->
+            <p></p>
           </div>
           
         </div>
       </div>
-  </section>
+  </section-->
 
   
   <!--artwork-->
@@ -82,6 +82,7 @@
                 <!--h4>Style Guideline</h4-->
               </div>
               <img src="images/landingpage5.png" class="img-fluid" alt="svg image">
+            </div>
             <div class="describe"><p></p></div>
             <div class="col-lg-12 col-md-12 col-12">
                 <div class="col-lg-8 img-title">
