--- a/portfolio/resume.html
+++ b/portfolio/resume.html
@@ -104,7 +104,7 @@
                     </div>
                     <div class="skills-section">
                         <h5 class="resume-title ">核心技能 Skills</h5>
-                        <div class="info">Design thinking / UI design / Wireframe繪製 / Prototype製作 / HTML5 / CSS3 / 響應式網頁設計</div>
+                        <div class="info">Design thinking / UI design / Wireframe繪製 / Prototype製作 / HTML5 / CSS3 / RWD網頁設計</div>
                     </div>
                     <div class="skills-section">
                         <h5 class="resume-title">專業工具 Tools</h5>
@@ -166,7 +166,7 @@
 
     
     <!-- FOOTER -->
-     <footer class="footer py-5">
+     <!--footer class="footer py-5">
           <div class="container">
                <div class="row">
 
@@ -176,7 +176,7 @@
                     
                </div>
           </div>
-     </footer>
+     </footer-->
 
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/popper.min.js"></script>
