--- a/portfolio/event.html
+++ b/portfolio/event.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Project 2</title>
+    <title>Project 4</title>
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/unicons.css">
@@ -53,69 +53,44 @@
       </div>
   </nav>
 
-  <section class="contact d-lg-flex justify-content-center align-items-center" id="contact">
+  <!--section class="contact d-lg-flex justify-content-center align-items-center" id="contact">
       <div class="container">
-        <div>
+        <div class="row">
           
-          <div>
-            <div> <img class="w-100" src="images/e-shopping1.jpg"></div>
+          <div class="col-lg-12 col-md-12 col-12">
+            <div> <img class="w-100" src="images/landingpage1.png"></div>
           </div>
 
-          <div class="project-name">
-            <h4>Furniture Online Shop</h4>
+          <div class="col-lg-12 col-12 project-name">
+            <h2 class="col-lg-8 mx-auto"></h2>
           </div>
-          <div>
-            <p class="describe">
-              使用清晰易讀的無襯線字體，確保在不同設備上的可讀性，同時傳達出現代感和專業性。
-              在版面配置上運用大量留白和網格系統，創造出簡約現代的視覺效果，凸顯產品圖片的展示效果。
-              這個設計方案旨在打造一個既美觀又實用的高端家居購物平台，通過優秀的視覺呈現和用戶體驗，有效展示進口產品的品質和魅力，提升用戶的購物體驗和轉化率。
-            </p>
+          <div class="col-lg-12 col-md-12 col-12">
+            <p></p>
           </div>
           
         </div>
       </div>
-  </section>
+  </section-->
 
   
   <!--artwork-->
   <section class="about d-lg-flex justify-content-center align-items-center" id="about">
-      <div class="container">
-          <div class="row">
-              <div class="col-lg-12 col-md-12 col-12">
-                <div class="col-lg-8 img-title">
-                  <h4>Style Guideline</h4>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-12">
+                    <div class="col-lg-8 img-title">
+                    <h5>尾牙活動登入頁面<span>(2023)</span></h5>
+                    <!--h4>Style Guideline</h4-->
+                    </div>
+                    <p style="margin: 0 0 0 24px;font-size: 15px;">Role：UI Design</p>
+                    <div class="describe"><p></p></div>
+                    <img src="images/event2.jpg" class="img-fluid" alt="image">
+                    <img src="images/event3.jpg" class="img-fluid" alt="image">
                 </div>
-                <img src="images/style.jpg" class="img-fluid" alt="svg image">
                 <div class="describe"><p></p></div>
-              </div>
-              <div class="col-lg-12 col-md-12 col-12">
-                <div class="col-lg-8 img-title">
-                  <!--h4>首頁 / 電腦版</h4-->
                 </div>
-                <img class="w-100" src="images/e-shopping2.jpg">
-              </div>
-
-              <div class="col-lg-12 col-md-12 col-12">
-                <div class="col-lg-8 img-title">
-                  <!--h4>首頁 / APP</h4-->
-                </div>
-                <p>主要使用白色背景配上柔和的橙色和棕色作為強調色，營造出溫馨舒適的氛圍，與家具產品的性質相呼應。
-                </p>
-                <img class="w-100" src="images/e-shopping3.jpg">
-              </div>
-
-              <div class="col-lg-12 col-md-12 col-12">
-                <div class="col-lg-8 img-title">
-                  <!--h4>VIP制度</h4-->
-                </div>
-                <p>產品篩選、顏色選擇、評分系統等，增強了網站的實用性和互動性。</p>
-                <p>實現高質量的產品圖片展示，包括360度旋轉多角度展示，幫助使用者更了解產品細節及特性。</p>
-                <img class="w-100" src="images/e-shopping4.jpg">
-              </div>
-
             </div>
-          </div>
-      </div>
+        </div>
   </section>
 
 
