--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -81,7 +81,7 @@
 
     <div id="artwork" class="artwork-secion">
       <div class="container">
-        <h4><span class="left"></span>PROJECTS<span class="right"></span></h4>
+        <h4><span class="left"></span>Projects<span class="right"></span></h4>
       </div>
     </div>
     <section class="full-screen d-lg-flex justify-content-center align-items-center">
@@ -89,8 +89,11 @@
           <div class="row">
               
             <div class="col-12">
-              <div class="">
-                <a href="project1.html"><img src="images/gotrade_1.png" class="img-fluid" alt="svg image"></a>
+              <div>
+                <a href="gotrade.html"><img src="images/gotrade_1.jpg" class="img-fluid" alt="svg image"></a>
+                <div class="artwork-text">
+                  <p style="text-align: center;">數位資產管理錢包<br>Role: UI/UX Design, HTML5/CSS3</p>
+                </div>
               </div>
             </div>
 
@@ -119,8 +122,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <div class="">
-                        <a href="project3.html"><img src="images/landingpage1.png" class="img-fluid" alt="svg image"></a>
+                    <div>
+                        <a href="mypay.html"><img src="images/mypay.jpg" class="img-fluid" alt="svg image"></a>
+                        <div class="artwork-text">
+                          <p style="text-align: center;">RWD一頁式網站 Landing Page<br>Role: UI Design, HTML5/CSS3</p>
+                        </div>
                     </div>
                 </div>
 
@@ -139,13 +145,46 @@
         </div>
     </section>
 
+    <section class="full-screen d-lg-flex justify-content-center align-items-center" >
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div>
+                        <a href="event.html"><img src="images/event1.jpg" class="img-fluid" alt="svg image"></a>
+                        <div class="artwork-text">
+                          <p style="text-align: center;">尾牙活動頁面<br>Role: UI Design</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="full-screen d-lg-flex justify-content-center align-items-center" >
+      <div class="container">
+          <div class="row">
+              <div class="col-12">
+                  <div>
+                      <a href="event_egg.html"><img src="images/event_egg1.jpg" class="img-fluid" alt="image"></a>
+                      <div class="artwork-text">
+                        <p style="text-align: center;">活動頁面<br>Role: UI Design, Visual Design, HTML5/CSS3</p>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </section>
+
 
     <section class="full-screen d-lg-flex justify-content-center align-items-center" >
         <div class="container">
             <div class="row">
                 <div class="col-12">
                     <div class="">
-                        <a href="project2.html"><img src="images/e-shopping1.png" class="img-fluid" alt="svg image"></a>
+                        <a href="project2.html"><img src="images/e-shopping1.jpg" class="img-fluid" alt="svg image"></a>
+                        <div class="artwork-text">
+                          <p style="text-align: center;">家具線上購物 Concept<br>Role: UI Design</p>
+                        </div>
                     </div>
                 </div>
 
