--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -58,12 +58,12 @@
                               <div class="animated-info">
                                   <span class="animated-item">Sammi / 王瑋婕</span>
                                   <span class="animated-item">Web Designer</span>
-                                  <span class="animated-item">UI Specialist</span>
+                                  <span class="animated-item">UI/UX Specialist</span>
                               </div>
                         </h1>
 
                         <div class="features">
-                            <p><span class="spot"></span>具備7年的UI設計專業經驗，擅長將設計理念轉化為實用的產品介面</p>
+                            <p><span class="spot"></span>具備7年的UI/UX設計專業經驗，擅長將設計理念轉化為實用的產品介面</p>
                             <p><span class="spot"></span>精通 HTML5 和 CSS3，專長響應式網頁設計</p>
                             <p><span class="spot"></span>富有團隊協作精神，善於激發創意思維，共同解決複雜設計挑戰</p>
                         </div>
