--- a/portfolio/resume.html
+++ b/portfolio/resume.html
@@ -69,9 +69,10 @@
                         </h1>
 
                         <div class="features">
-                          <p><span class="spot"></span>具備 7 年 UI 設計專業經驗，擅長將創新設計理念轉化為實用產品介面</p>
-                          <p><span class="spot"></span>精通 HTML5 和 CSS3，專長響應式網頁設計</p>
-                          <p><span class="spot"></span>富有團隊協作精神，善於激發創意思維，共同解決複雜設計挑戰</p>
+                            <p><span class="spot"></span>熟練掌握 UI 設計工具，擅長將創新設計理念轉化為實用產品介面</p>
+                            <p><span class="spot"></span>深入了解使用者需求，提供符合直覺且具備優良使用者體驗的設計</p>
+                            <p><span class="spot"></span>精通 HTML5 和 CSS3，專長響應式網頁設計</p>
+                            <p><span class="spot"></span>富有團隊協作精神，善於激發創意思維，共同解決複雜設計挑戰</p>
                         </div>
 
                         <a class="download-btn" href="images/sammi-resume.pdf" download="sammi-resume">下載履歷</a>
