--- a/portfolio/gotrade.html
+++ b/portfolio/gotrade.html
@@ -61,6 +61,34 @@
             </div>
             <div class="row ps-wp">
                 <div class="col-12">
+                    <div class="col-lg-8 img-title"><h5>問題困境</h5></div>
+                </div>
+                <div class="col-lg-6 col-12">
+                    <div class="ps-section">
+                        <h5>Problems</h5>
+                        <ul>
+                            <li><span class="spot"></span>需購買代幣進行線上遊戲，需要提供詳細的個人和銀行信息</li>
+                            <li><span class="spot"></span>想用現有的虛擬貨幣來進行遊戲，以利增加虛擬貨幣的運用</li>
+                            <li><span class="spot"></span>就目前的頁面，產品流程不直觀，資訊分散於不同頁面，用戶無法迅速找到要點選哪一功能項目</li>
+                            <li><span class="spot"></span>新手用戶對於購買流程不熟悉</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-12">
+                    <div class="ps-section">
+                        <h5>Solutions</h5>
+                        <ul>
+                            <li><span class="spot"></span>運用區塊鏈技術進行遊戲，更能提高隱私性和匿名性</li>
+                            <li><span class="spot"></span>結合區塊鏈與遊戲整合，在遊戲中直接使用虛擬貨幣遊玩</li>
+                            <li><span class="spot"></span>增加教學功能，以利初次使用的用戶了解操作</li>
+                            <li><span class="spot"></span>管理虛擬資產，儲值、提領及交換</li>
+                            <li><span class="spot"></span>直觀的資訊呈現，更改功能位置</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <!--div class="row ps-wp">
+                <div class="col-12">
                     <div class="col-lg-8 img-title"><h5>Problems / Solutions</h5></div>
                 </div>
                 <div class="col-lg-6 col-12">
@@ -83,7 +111,7 @@
                         </ul>
                     </div>
                 </div>
-            </div>
+            </div-->
         </div>
     </section>
 
@@ -99,44 +127,12 @@
                     <img src="images/map.jpg" class="img-fluid">
                 </div>
                 <div class="col-lg-12 col-md-12 col-12">
-                    <div class="col-lg-8 img-title">
-                    <h5>icon</h5>
-                    </div>
-                    <div class="describe"><p>主視覺使用藍色色調，  採用簡單易懂的色彩和形狀，突出了清晰簡潔的特點</p></div>
-                    <img src="images/iconColor.jpg" class="img-fluid">
+                    <img src="images/slice1.jpg" class="img-fluid">
+                    <img src="images/slice2.jpg" class="img-fluid">
+                    <img src="images/slice3.jpg" class="img-fluid">
+                    <img src="images/slice4.jpg" class="img-fluid">
+                    <img src="images/slice5.jpg" class="img-fluid">
                 </div>
-                <div class="col-lg-12 col-md-12 col-12">
-                    <div class="col-lg-8 img-title">
-                        <h5>登入、註冊、忘記密碼</h5>
-                    </div>
-                    <img class="w-100" src="images/login.jpg">
-                </div>
-                <div class="col-lg-12 col-md-12 col-12">
-                    <div class="col-lg-8 img-title">
-                        <h5>儲值、提領、交換</h5>
-                    </div>
-                    <div class="describe">
-                        <p>儲值、提領及交換於一體，能讓使用者輕鬆管理虛擬貨幣。<br></p>
-                    </div>
-                    <img class="w-100" src="images/deposit.jpg">
-                </div>
-
-                <div class="col-lg-12 col-md-12 col-12">
-                    <div class="col-lg-8 img-title">
-                        <h5>各項活動頁面</h5>
-                    </div>
-                    <div class="describe"><p>不定期會有活動，用戶能從中獲得獎勵，我們通過不定期的獎勵機制，鼓勵用戶持續參與，從而優化用戶體驗並提高平台的使用頻率</p></div>
-                    <img class="w-100" src="images/events.jpg">
-                </div>
-
-                <div class="col-lg-12 col-md-12 col-12">
-                    <div class="col-lg-8  img-title">
-                        <h5>VIP制度</h5>
-                    </div>
-                    <div class="describe"><p> 通過設計VIP等級和獎勵制度,可以提高用戶參與度和活躍度</p></div>
-                    <img class="w-100" src="images/vip.jpg">
-                </div>
-
             </div>
         </div>
     </section>
